# booking-AI-system

./: README.md  docker-compose.yml
booking-ai-chatbot/: README.md
booking-ai-chatbot/backend/: .env.example  pyproject.toml
booking-ai-chatbot/backend/app/: main.py
booking-ai-chatbot/backend/app/api/: chat.py  schemas.py
booking-ai-chatbot/backend/app/application/: __init__.py  booking_workflow.py  contracts.py  create_booking_flow.py  intent_router.py  nlu.py  orchestrator.py
booking-ai-chatbot/backend/app/core/: config.py  exceptions.py
booking-ai-chatbot/backend/app/domain/: __init__.py  intent.py  models.py  nlu.py  state.py
booking-ai-chatbot/backend/app/handlers/: __init__.py  booking.py  clarification.py  faq.py  general.py  information.py
booking-ai-chatbot/backend/app/integrations/: booking_api.py  booking_gateway.py  groq.py  qdrant.py  redis.py
booking-ai-chatbot/backend/app/policies/: __init__.py  input_guard.py  tool_policy.py
booking-ai-chatbot/backend/app/rag/: chain.py  embeddings.py  ingestion.py  prompts.py  router.py  vector_store.py
booking-ai-chatbot/backend/app/tools/: booking.py  faq.py  intent.py  mutation.py  read_only.py  shop.py  slot.py  state.py
booking-ai-chatbot/backend/tests/: conftest.py  test_booking_workflow.py  test_create_booking_flow.py  test_integrations.py  test_main.py  test_orchestrator.py  test_rag_flow.py  test_redis_store.py  test_tools.py
booking-ai-system-be/: .env.example  README.md  alembic.ini  pyproject.toml  test_supabase.py
booking-ai-system-fe/: Dockerfile  package-lock.json  package.json
(+206 files in other folders)
